# minmon

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  deny.toml  docker-compose.yml  example-config.toml  minmon.spec  minmon.toml  systemd.minmon.service
.github/workflows/: binary-release.yml  build-rpm.yml  cargo-deny.yml  cargo-publish.yml  crate-publish.yml  docker-main.yml  docker-publish-cross.yml  docker-publish.yml  docker-release.yml  test.yml
doc/: action.md  check.md  existing-alternatives.md  filter.md  general.md  log.md  placeholders.md  report.md
doc/action/: email.md  log.md  process.md  webhook.md
doc/check/: docker_container_status.md  filesystem_usage.md  memory_usage.md  network_throughput.md  pressure_average.md  process_exit_status.md  process_output_integer.md  process_output_match.md  systemd_unit_status.md  temperature.md
doc/filter/: average.md  peak.md  sum.md
examples/: example-config.toml
src/: action.rs  alarm.rs  check.rs  config.rs  lib.rs  main.rs  measurement.rs  placeholder.rs  process.rs  report.rs  systemd.rs  uptime.rs  window_buffer.rs
src/action/: email.rs  log.rs  mod.rs  process.rs  web_hook.rs  webhook.rs
src/alarm/: binary_state.rs  data_size.rs  integer.rs  level.rs  mod.rs  state_machine.rs  status_code.rs  temperature.rs
src/check/: docker_container_status.rs  filesystem_usage.rs  memory_usage.rs  mod.rs  network_throughput.rs  pressure_average.rs  process_exit_status.rs  process_output_integer.rs  process_output_match.rs  systemd_unit_status.rs  temperature.rs
src/filter/: average.rs  mod.rs  peak.rs  sum.rs
