[package]
name = "minmon"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
libsystemd = { version = "0.5", optional = true }
systemd-journal-logger = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
nix = "0.26"
log = { version = "0.4", features = ["std"] }
env_logger = { version = "0.10", features = ["humantime"], default-features = false }
async-trait = "0.1"
text_placeholder = "0.4"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }

[dev-dependencies]
mockall = "0.11"

[features]
default = ["systemd"]
systemd = ["dep:libsystemd", "dep:systemd-journal-logger"]
