[package]
name = "minmon"
description = "An opinionated minimal monitoring and alarming tool"
version = "0.5.9"
authors = ["Florian Wickert <FlorianWickert@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/flo-at/minmon"
keywords = ["monitoring", "alarming", "uptime"]
edition = "2021"

[dependencies]
toml = "0.7"
reqwest = { version = "0.11", optional = true, default-features = false }
tokio = { version = "1.32", features = ["full"] }
libsystemd = { version = "0.6", optional = true }
systemd-journal-logger = { version = "2.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.27", features = ["fs"] }
log = { version = "0.4", features = ["std"] }
env_logger = { version = "0.10", features = ["humantime"], default-features = false }
async-trait = "0.1"
text_placeholder = "0.5"
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
lettre = { version = "0.10", features = ["smtp-transport", "builder"], default-features = false, optional = true }
sensors = { version = "0.2", optional = true }
rand = "0.8"
bollard = { version = "0.14.0", optional = true }

[dev-dependencies]
mockall = "0.11"

[features]
__rustls = ["lettre?/tokio1-rustls-tls", "reqwest?/rustls-tls"]
__tls = ["lettre?/tokio1-native-tls", "reqwest?/native-tls"]
default = ["default-tls"]
default-tls = ["native-tls"]
native-tls = ["__tls"]
rustls-tls = ["__rustls"]
http = ["reqwest"]
smtp = ["lettre"]
systemd = ["dep:libsystemd", "dep:systemd-journal-logger"]
docker = ["dep:bollard"]
full = ["docker", "http", "sensors", "smtp", "systemd"]

[profile.release]
strip = true
lto = true
panic = "abort"
